gen/pyGramParser.py
# Generated from /home/jpedro/workspace/jpedrodsp/novo_compilador/pyGram.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pyGramParser ( Parser ):

    grammarFileName = "pyGram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'print'", "'input'", "'range'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'='", "'>'", 
                     "'<'", "'>='", "'<='", "'=='", "'!='", "'+'", "'-'", 
                     "'*'", "'/'", "','", "':'", "';'", "'('", "')'", "'{'", 
                     "'}'", "'||'", "'&&'", "'!'", "'for'", "'break'", "'if'", 
                     "'else'", "'while'", "'in'", "'def'", "'main'", "'return'", 
                     "<INVALID>", "'int'", "'real'", "'string'", "'bool'", 
                     "'void'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "PRINT", "INPUT", "RANGE", "INT_VALUE", 
                      "FLOAT_VALUE", "STR_VALUE", "BOOL_VALUE", "KW_ASSIGNMENT", 
                      "KW_GREATERTHAN", "KW_LESSERTHAN", "KW_GREATERQUALTHAN", 
                      "KW_LESSEREQUALTHAN", "KW_EQUAL", "KW_NOTEQUAL", "KW_PLUS", 
                      "KW_MINUS", "KW_MULT", "KW_DIV", "KW_COMMA", "KW_COLON", 
                      "KW_SEMICOLON", "KW_PARENTHESIS_OPEN", "KW_PARENTHESIS_CLOSE", 
                      "KW_BRACKETS_OPEN", "KW_BRACKETS_CLOSE", "KW_OR", 
                      "KW_AND", "KW_NOT", "KW_FOR", "KW_BREAK", "KW_IF", 
                      "KW_ELSE", "KW_WHILE", "KW_IN", "KW_DEF", "KW_MAIN", 
                      "KW_RETURN", "TYPE", "KW_INT", "KW_FLOAT", "KW_STRING", 
                      "KW_BOOL", "KW_VOID", "KW_TRUE", "KW_FALSE", "ID", 
                      "WS" ]

    RULE_program = 0
    RULE_global_variables_declaration = 1
    RULE_functions_declaration = 2
    RULE_main_function_declaration = 3
    RULE_function_body_statements = 4
    RULE_function_declaration = 5
    RULE_return_statement = 6
    RULE_function_call_statement = 7
    RULE_forloop_statement = 8
    RULE_while_statement = 9
    RULE_break_statement = 10
    RULE_if_statement = 11
    RULE_else_statement = 12
    RULE_print_statement = 13
    RULE_variable_declaration_statement = 14
    RULE_single_variable_declaration_statement = 15
    RULE_multiple_variable_declaration_statement = 16
    RULE_assigment_statement = 17
    RULE_expr = 18
    RULE_term = 19
    RULE_term2 = 20
    RULE_term3 = 21
    RULE_term4 = 22
    RULE_term5 = 23
    RULE_term6 = 24
    RULE_factor = 25
    RULE_r_input = 26

    ruleNames =  [ "program", "global_variables_declaration", "functions_declaration", 
                   "main_function_declaration", "function_body_statements", 
                   "function_declaration", "return_statement", "function_call_statement", 
                   "forloop_statement", "while_statement", "break_statement", 
                   "if_statement", "else_statement", "print_statement", 
                   "variable_declaration_statement", "single_variable_declaration_statement", 
                   "multiple_variable_declaration_statement", "assigment_statement", 
                   "expr", "term", "term2", "term3", "term4", "term5", "term6", 
                   "factor", "r_input" ]

    EOF = Token.EOF
    PRINT=1
    INPUT=2
    RANGE=3
    INT_VALUE=4
    FLOAT_VALUE=5
    STR_VALUE=6
    BOOL_VALUE=7
    KW_ASSIGNMENT=8
    KW_GREATERTHAN=9
    KW_LESSERTHAN=10
    KW_GREATERQUALTHAN=11
    KW_LESSEREQUALTHAN=12
    KW_EQUAL=13
    KW_NOTEQUAL=14
    KW_PLUS=15
    KW_MINUS=16
    KW_MULT=17
    KW_DIV=18
    KW_COMMA=19
    KW_COLON=20
    KW_SEMICOLON=21
    KW_PARENTHESIS_OPEN=22
    KW_PARENTHESIS_CLOSE=23
    KW_BRACKETS_OPEN=24
    KW_BRACKETS_CLOSE=25
    KW_OR=26
    KW_AND=27
    KW_NOT=28
    KW_FOR=29
    KW_BREAK=30
    KW_IF=31
    KW_ELSE=32
    KW_WHILE=33
    KW_IN=34
    KW_DEF=35
    KW_MAIN=36
    KW_RETURN=37
    TYPE=38
    KW_INT=39
    KW_FLOAT=40
    KW_STRING=41
    KW_BOOL=42
    KW_VOID=43
    KW_TRUE=44
    KW_FALSE=45
    ID=46
    WS=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_variables_declaration(self):
            return self.getTypedRuleContext(pyGramParser.Global_variables_declarationContext,0)


        def functions_declaration(self):
            return self.getTypedRuleContext(pyGramParser.Functions_declarationContext,0)


        def main_function_declaration(self):
            return self.getTypedRuleContext(pyGramParser.Main_function_declarationContext,0)


        def getRuleIndex(self):
            return pyGramParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = pyGramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.global_variables_declaration()
            self.state = 55
            self.functions_declaration()
            self.state = 56
            self.main_function_declaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_variables_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyGramParser.Variable_declaration_statementContext)
            else:
                return self.getTypedRuleContext(pyGramParser.Variable_declaration_statementContext,i)


        def getRuleIndex(self):
            return pyGramParser.RULE_global_variables_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_variables_declaration" ):
                listener.enterGlobal_variables_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_variables_declaration" ):
                listener.exitGlobal_variables_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_variables_declaration" ):
                return visitor.visitGlobal_variables_declaration(self)
            else:
                return visitor.visitChildren(self)




    def global_variables_declaration(self):

        localctx = pyGramParser.Global_variables_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_variables_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==pyGramParser.TYPE:
                self.state = 58
                self.variable_declaration_statement()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Functions_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pyGramParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(pyGramParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return pyGramParser.RULE_functions_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctions_declaration" ):
                listener.enterFunctions_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctions_declaration" ):
                listener.exitFunctions_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctions_declaration" ):
                return visitor.visitFunctions_declaration(self)
            else:
                return visitor.visitChildren(self)




    def functions_declaration(self):

        localctx = pyGramParser.Functions_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functions_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 64
                    self.function_declaration() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_DEF(self):
            return self.getToken(pyGramParser.KW_DEF, 0)

        def KW_MAIN(self):
            return self.getToken(pyGramParser.KW_MAIN, 0)

        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_OPEN, 0)

        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_CLOSE, 0)

        def KW_BRACKETS_OPEN(self):
            return self.getToken(pyGramParser.KW_BRACKETS_OPEN, 0)

        def function_body_statements(self):
            return self.getTypedRuleContext(pyGramParser.Function_body_statementsContext,0)


        def KW_BRACKETS_CLOSE(self):
            return self.getToken(pyGramParser.KW_BRACKETS_CLOSE, 0)

        def getRuleIndex(self):
            return pyGramParser.RULE_main_function_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain_function_declaration" ):
                listener.enterMain_function_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain_function_declaration" ):
                listener.exitMain_function_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_function_declaration" ):
                return visitor.visitMain_function_declaration(self)
            else:
                return visitor.visitChildren(self)




    def main_function_declaration(self):

        localctx = pyGramParser.Main_function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_main_function_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(pyGramParser.KW_DEF)
            self.state = 71
            self.match(pyGramParser.KW_MAIN)
            self.state = 72
            self.match(pyGramParser.KW_PARENTHESIS_OPEN)
            self.state = 73
            self.match(pyGramParser.KW_PARENTHESIS_CLOSE)
            self.state = 74
            self.match(pyGramParser.KW_BRACKETS_OPEN)
            self.state = 75
            self.function_body_statements()
            self.state = 76
            self.match(pyGramParser.KW_BRACKETS_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_body_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forloop_statement(self):
            return self.getTypedRuleContext(pyGramParser.Forloop_statementContext,0)


        def function_body_statements(self):
            return self.getTypedRuleContext(pyGramParser.Function_body_statementsContext,0)


        def break_statement(self):
            return self.getTypedRuleContext(pyGramParser.Break_statementContext,0)


        def while_statement(self):
            return self.getTypedRuleContext(pyGramParser.While_statementContext,0)


        def if_statement(self):
            return self.getTypedRuleContext(pyGramParser.If_statementContext,0)


        def else_statement(self):
            return self.getTypedRuleContext(pyGramParser.Else_statementContext,0)


        def print_statement(self):
            return self.getTypedRuleContext(pyGramParser.Print_statementContext,0)


        def assigment_statement(self):
            return self.getTypedRuleContext(pyGramParser.Assigment_statementContext,0)


        def variable_declaration_statement(self):
            return self.getTypedRuleContext(pyGramParser.Variable_declaration_statementContext,0)


        def function_call_statement(self):
            return self.getTypedRuleContext(pyGramParser.Function_call_statementContext,0)


        def KW_SEMICOLON(self):
            return self.getToken(pyGramParser.KW_SEMICOLON, 0)

        def return_statement(self):
            return self.getTypedRuleContext(pyGramParser.Return_statementContext,0)


        def getRuleIndex(self):
            return pyGramParser.RULE_function_body_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body_statements" ):
                listener.enterFunction_body_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body_statements" ):
                listener.exitFunction_body_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body_statements" ):
                return visitor.visitFunction_body_statements(self)
            else:
                return visitor.visitChildren(self)




    def function_body_statements(self):

        localctx = pyGramParser.Function_body_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_body_statements)
        self._la = 0 # Token type
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.forloop_statement()
                self.state = 79
                self.function_body_statements()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.break_statement()
                self.state = 82
                self.function_body_statements()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.while_statement()
                self.state = 85
                self.function_body_statements()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.if_statement()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pyGramParser.KW_ELSE:
                    self.state = 88
                    self.else_statement()


                self.state = 91
                self.function_body_statements()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 93
                self.print_statement()
                self.state = 94
                self.function_body_statements()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.assigment_statement()
                self.state = 97
                self.function_body_statements()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 99
                self.variable_declaration_statement()
                self.state = 100
                self.function_body_statements()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 102
                self.function_call_statement()
                self.state = 103
                self.match(pyGramParser.KW_SEMICOLON)
                self.state = 104
                self.function_body_statements()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 106
                self.return_statement()
                self.state = 107
                self.function_body_statements()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pyGramParser.RULE_function_declaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class L_typeContext(Function_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pyGramParser.Function_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KW_DEF(self):
            return self.getToken(pyGramParser.KW_DEF, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.ID)
            else:
                return self.getToken(pyGramParser.ID, i)
        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_OPEN, 0)
        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_CLOSE, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.TYPE)
            else:
                return self.getToken(pyGramParser.TYPE, i)
        def KW_BRACKETS_OPEN(self):
            return self.getToken(pyGramParser.KW_BRACKETS_OPEN, 0)
        def function_body_statements(self):
            return self.getTypedRuleContext(pyGramParser.Function_body_statementsContext,0)

        def KW_BRACKETS_CLOSE(self):
            return self.getToken(pyGramParser.KW_BRACKETS_CLOSE, 0)
        def KW_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.KW_COMMA)
            else:
                return self.getToken(pyGramParser.KW_COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_type" ):
                listener.enterL_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_type" ):
                listener.exitL_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_type" ):
                return visitor.visitL_type(self)
            else:
                return visitor.visitChildren(self)


    class L_voidContext(Function_declarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pyGramParser.Function_declarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KW_DEF(self):
            return self.getToken(pyGramParser.KW_DEF, 0)
        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.ID)
            else:
                return self.getToken(pyGramParser.ID, i)
        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_OPEN, 0)
        def KW_PARENTHESIS_CLOSE(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_CLOSE, 0)
        def KW_BRACKETS_OPEN(self):
            return self.getToken(pyGramParser.KW_BRACKETS_OPEN, 0)
        def function_body_statements(self):
            return self.getTypedRuleContext(pyGramParser.Function_body_statementsContext,0)

        def KW_BRACKETS_CLOSE(self):
            return self.getToken(pyGramParser.KW_BRACKETS_CLOSE, 0)
        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.TYPE)
            else:
                return self.getToken(pyGramParser.TYPE, i)
        def KW_VOID(self):
            return self.getToken(pyGramParser.KW_VOID, 0)
        def KW_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pyGramParser.KW_COMMA)
            else:
                return self.getToken(pyGramParser.KW_COMMA, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterL_void" ):
                listener.enterL_void(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitL_void" ):
                listener.exitL_void(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitL_void" ):
                return visitor.visitL_void(self)
            else:
                return visitor.visitChildren(self)



    def function_declaration(self):

        localctx = pyGramParser.Function_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_declaration)
        self._la = 0 # Token type
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = pyGramParser.L_typeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(pyGramParser.KW_DEF)
                self.state = 113
                self.match(pyGramParser.ID)
                self.state = 114
                self.match(pyGramParser.KW_PARENTHESIS_OPEN)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pyGramParser.TYPE:
                    self.state = 115
                    self.match(pyGramParser.TYPE)
                    self.state = 116
                    self.match(pyGramParser.ID)
                    self.state = 122
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==pyGramParser.KW_COMMA:
                        self.state = 117
                        self.match(pyGramParser.KW_COMMA)
                        self.state = 118
                        self.match(pyGramParser.TYPE)
                        self.state = 119
                        self.match(pyGramParser.ID)
                        self.state = 124
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 127
                self.match(pyGramParser.KW_PARENTHESIS_CLOSE)
                self.state = 128
                self.match(pyGramParser.TYPE)
                self.state = 129
                self.match(pyGramParser.KW_BRACKETS_OPEN)
                self.state = 130
                self.function_body_statements()
                self.state = 131
                self.match(pyGramParser.KW_BRACKETS_CLOSE)
                pass

            elif la_ == 2:
                localctx = pyGramParser.L_voidContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.match(pyGramParser.KW_DEF)
                self.state = 134
                self.match(pyGramParser.ID)
                self.state = 135
                self.match(pyGramParser.KW_PARENTHESIS_OPEN)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pyGramParser.TYPE:
                    self.state = 136
                    self.match(pyGramParser.TYPE)
                    self.state = 137
                    self.match(pyGramParser.ID)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==pyGramParser.KW_COMMA:
                        self.state = 138
                        self.match(pyGramParser.KW_COMMA)
                        self.state = 139
                        self.match(pyGramParser.TYPE)
                        self.state = 140
                        self.match(pyGramParser.ID)
                        self.state = 145
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 148
                self.match(pyGramParser.KW_PARENTHESIS_CLOSE)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==pyGramParser.KW_VOID:
                    self.state = 149
                    self.match(pyGramParser.KW_VOID)


                self.state = 152
                self.match(pyGramParser.KW_BRACKETS_OPEN)
                self.state = 153
                self.function_body_statements()
                self.state = 154
                self.match(pyGramParser.KW_BRACKETS_CLOSE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_RETURN(self):
            return self.getToken(pyGramParser.KW_RETURN, 0)

        def KW_SEMICOLON(self):
            return self.getToken(pyGramParser.KW_SEMICOLON, 0)

        def expr(self):
            return self.getTypedRuleContext(pyGramParser.ExprContext,0)


        def getRuleIndex(self):
            return pyGramParser.RULE_return_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_statement" ):
                listener.enterReturn_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_statement" ):
                listener.exitReturn_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_statement" ):
                return visitor.visitReturn_statement(self)
            else:
                return visitor.visitChildren(self)




    def return_statement(self):

        localctx = pyGramParser.Return_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_return_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(pyGramParser.KW_RETURN)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << pyGramParser.INT_VALUE) | (1 << pyGramParser.FLOAT_VALUE) | (1 << pyGramParser.STR_VALUE) | (1 << pyGramParser.BOOL_VALUE) | (1 << pyGramParser.KW_MINUS) | (1 << pyGramParser.KW_PARENTHESIS_OPEN) | (1 << pyGramParser.KW_NOT) | (1 << pyGramParser.ID))) != 0):
                self.state = 159
                self.expr(0)


            self.state = 162
            self.match(pyGramParser.KW_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_call_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.type_ = None

        def ID(self):
            return self.getToken(pyGramParser.ID, 0)

        def KW_PARENTHESIS_OPEN(self):
            return self.getToken(pyGramParser.KW_PARENTHESIS_OPEN, 0)
